--- a/CMS_React/src/index.html
+++ b/CMS_React/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" class="pf-v5-theme-light">
+<html lang="en-US" id="theme" class="pf-v5-theme-light">
 
 <head>
   <meta charset="utf-8">
